# plex_lastfm_now_playing

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  plex_lastfm_now_playing.py  pyproject.toml
.github/workflows/: docker-publish.yml  pytest.yml
src/plex_lastfm_now_playing/: __init__.py  config.py  exceptions.py  main.py  models.py  plex_lastfm_now_playing.py
tests/: __init__.py  test_plex_lastfm.py
